Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
 <p>Born and raised in Yantai, Shandong, China, I am a first year graduate student at University of Southern California in Los Angeles, CA. I am currently pursuing my master degree in Computer Science.</p>
 
-<p>You can learn more about me via my <a href="">Resume</a> and <a href="https://www.linkedin.com/in/tongzhang1994">Linkedin Profile</a>.</p>
+<p>You can learn more about me via </p>
+
+<p><a href="https://www.linkedin.com/in/tongzhang1994"><img src="https://github.com/TongZhangUSC/TongZhangUSC.github.io/blob/master/images/linkedin.jpg" alt="My Linkedin Profile" title="title"></a>
+<a href="https://tongzhangusc.github.io/resume.html"><img src="https://github.com/TongZhangUSC/TongZhangUSC.github.io/blob/master/images/resume.jpg" alt="My Resume" title="title"></a></p>
+
+<p>Hope you enjoy my homepage!</p>
       </section>
     </div>
 
