Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>You can learn more about me via </p>
 
-<p><a href="https://www.linkedin.com/in/tongzhang1994"><img src="https://github.com/TongZhangUSC/TongZhangUSC.github.io/blob/master/images/linkedin.jpg" alt="My Linkedin Profile" title="title"></a>
+<p><a href="https://www.linkedin.com/in/tongzhang1994"><img src="https://github.com/TongZhangUSC/TongZhangUSC.github.io/blob/master/images/linkedin.jpg" alt="My Linkedin Profile" title="title"></a> and 
 <a href="https://tongzhangusc.github.io/resume.html"><img src="https://github.com/TongZhangUSC/TongZhangUSC.github.io/blob/master/images/resume.jpg" alt="My Resume" title="title"></a></p>
 
 <p>Hope you enjoy my homepage!</p>
