--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/TongZhangUSC" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
-
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/TongZhangUSC" id="view-on-github" class="button"><span>View on Resume</span></a>
+        </section>
         <hr>
 
         <section id="main_content">
