--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/TongZhangUSC" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://tongzhangusc.github.io/resume.html" id="view-on-resume" class="button"><span>View my Resume</span></a>
         </section>
           <hr>
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/TongZhangUSC" id="view-on-github" class="button"><span>View on Resume</span></a>
-        </section>
         
 
         <section id="main_content">
