--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>Born and raised in Yantai, Shandong, China, I am a first year graduate student at University of Southern California in Los Angeles, CA. I am currently pursuing my master degree in Computer Science.</p>
 
-<p>You can learn more about me via my <a href="https://tongzhangusc.github.io/resume.html">resume</a> and my <a href="https://www.linkedin.com/in/tongzhang1994">Linkedin Profile</a>.</p>
+<p>You can also learn more about me via my <a href="https://www.linkedin.com/in/tongzhang1994">Linkedin Profile</a>.</p>
 
 <p>Hope you enjoy my homepage!</p>
         </section>
